Modify team page to fit better on iPhone

--- a/css/styles.less
+++ b/css/styles.less
@@ -157,7 +157,8 @@ body {
 	display:block;
 	float:left;
 	margin-right:5%;
-	width:20%;
+	padding-top: 5%;
+	width:10%;
 }
 
 .leader h1 {
@@ -262,5 +263,15 @@ strong {
 
 	.leader h1 {
 		font-size:1.2em;
+	}
+}
+
+@media only screen and (max-width:370px) {
+	.leader .position {
+		font-size:1.5em;
+	}
+
+	.leader h1 {
+		font-size:1em;
 	}
 }
