--- a/css/styles.less
+++ b/css/styles.less
@@ -140,8 +140,15 @@ body {
 	overflow:hidden;
 }
 
-.leader a:hover, .leader a:active {
+.leader a:hover {
 	background:lighten(@colorRoute, 10%);
+}
+
+.leader.my-team a, .leader.my-row a {
+	background:lighten(#00ADEF, 30%);
+}
+.leader.my-team a:hover, .leader.my-row a:hover {
+	background:lighten(#00ADEF, 10%) + #000;
 }
 
 .leader .position {
@@ -151,6 +158,7 @@ body {
 	padding:0;
 	margin-right:5%;
 	margin-top:5%;
+	color:darken(@colorRoute, 10%);
 }
 
 .leader img {
@@ -161,11 +169,26 @@ body {
 	width:10%;
 }
 
+.leader header {
+	float:left;
+	margin-top:4%;
+}
+
 .leader h1 {
 	font-size:1.5em;
 	text-align: left;
 	float:left;
-	margin-top:7%;
+	margin-top:6%;
+}
+
+.leader header h1 {
+	float:none;
+	margin-top:0;
+}
+
+.leader h2 {
+	font-size:.75em;
+	text-align: left;
 }
 
 .leader .miles {
@@ -250,6 +273,10 @@ p {
 
 a, h1 a, h2 a {
 	text-decoration:none;
+}
+
+h4 {
+	font-size:.75em;	
 }
 
 strong {
