--- a/css/styles.less
+++ b/css/styles.less
@@ -326,6 +326,7 @@ strong {
 	float:left;
 	margin-top: 10px;
 	color:darken(@colorRoute, 40%);
+	width: 100%;
 }
 /*
 .progress .goal-text{
@@ -346,7 +347,7 @@ strong {
 */
 .progress-bar {
 	background: @colorRoute;
-	width: 40px;
+	/*width: 40px;*/
 	height: 3px;
 	margin-top: 6px;
 	float: left;
@@ -355,7 +356,7 @@ strong {
 .goal-bar {
 	/*border: 1px solid @colorRoute;*/
 	background: @colorRoute;
-	width: 140px;
+	/*width: 140px;*/
 	position: relative;
 	height: 1px;
 	margin-top: 7px;
