add team ranking and summarize team infor

--- a/css/styles.less
+++ b/css/styles.less
@@ -244,6 +244,19 @@ body {
 	margin:0;
 	padding:0;
 }
+/***** Team Leaderboard *****/
+#team-home .progress {
+	.title {
+		display: none;
+	}
+	.progress-indicator {
+		display: none;
+	}
+	.goal-indicator {
+		display: none;
+	}
+}
+
 
 /***** Team details *****/
 .team-details header {
@@ -335,7 +348,7 @@ strong {
 	height: 3px;
 	margin-top: 6px;
 	float: left;
-	margin-bottom: 20px;
+	/*margin-bottom: 20px;*/
 }
 .goal-bar {
 	background: @colorRoute;
