Build the Leaders board with php instead of .js

--- a/css/styles.less
+++ b/css/styles.less
@@ -245,7 +245,7 @@ body {
 	padding:0;
 }
 /***** Team Leaderboard *****/
-#team-home .progress {
+#team-home .progress, #leaderboard .progress {
 	.title {
 		display: none;
 	}
