move some styles around

--- a/css/styles.less
+++ b/css/styles.less
@@ -244,19 +244,6 @@ body {
 	margin:0;
 	padding:0;
 }
-/***** Team Leaderboard *****/
-#team-home .progress, #leaderboard .progress {
-	.title {
-		display: none;
-	}
-	.progress-indicator {
-		display: none;
-	}
-	.goal-indicator {
-		display: none;
-	}
-}
-
 
 /***** Team details *****/
 .team-details header {
@@ -333,7 +320,18 @@ strong {
 	font-weight:600;
 }
 
-/***** Goals ****/
+/***** Progress Bars ****/
+#team-home .progress, #leaderboard .progress {
+	.title {
+		display: none;
+	}
+	.progress-indicator {
+		display: none;
+	}
+	.goal-indicator {
+		display: none;
+	}
+}
 
 .progress {
 	float:left;
