--- a/css/styles.less
+++ b/css/styles.less
@@ -235,6 +235,44 @@ body {
 	color:@accentBlue;	
 }
 
+#challenges {
+	
+	#challenge-mode {
+		width: 60%;
+		margin: auto auto;
+		overflow: hidden;
+	}
+	#challenge-mode ul {
+		list-style-type:none;
+	}
+
+	#challenge-mode ul li {
+		float: left;
+		width:50%;
+		border:1px solid darken(@lightGray, 20%);
+		border-left:none;
+	}
+
+	#challenge-mode ul li:first-child {
+		border-left:1px solid darken(@lightGray, 20%);
+	}
+
+	#challenge-mode ul li a {
+		text-decoration:none;
+		color:@darkGray;
+		display:block;
+		width:100%;
+		text-align:center;
+		padding:5% 5%;
+		margin:0;
+	}
+
+	#challenge-mode a.highlight {
+		background:lighten(@darkGray, 20%);
+		color:#fff;
+	}
+}
+
 .leaderboard, .leaderboard {
 	margin-top:5%;
 	border-bottom:none;
@@ -455,6 +493,10 @@ h1 {
 
 .main-header h1 {
 	padding-top:2%;
+	margin-bottom: 0;
+	text-align: left;
+	padding-left:5px;
+	color:darken(@lightGray, 40%);
 }
 
 h2 {
@@ -543,6 +585,7 @@ strong {
 	position: relative;
 	left: -1px;
 	margin-top: 2px;
+	z-index: 100;
 }
 
 .goal-indicator {
