--- a/css/styles.less
+++ b/css/styles.less
@@ -1,5 +1,14 @@
+/***** Variables *******/
+@lightGray : #dedede;
+@darkGray : #666;
+@darkBlue : #59818B;
+@accentGreen : #27C86C;
+@accentBlue : #00AEDB;
+
+@font-sans : 'Open Sans', sans-serif;
+
 /**** Resets ***********/
-* {margin:0; padding:0; border:0; font-size:100%; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box;	font-family: Arial; font-size:100%; font-weight:normal;}
+* {margin:0; padding:0; border:0; font-size:100%; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box;	font-family: @font-sans; font-size:100%; font-weight:normal;}
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display:block;}
 
@@ -7,12 +16,57 @@ a:active, a:focus {outline:none;}
 
 img {max-width:100%}
 
-/***** Variables *******/
-@lightGray : #dedede;
-@darkGray : #666;
-@darkBlue : #59818B;
-@accentGreen : #27C86C;
-@accentBlue : #00AEDB;
+/*
+22 pt = 1.84 em
+18 pt = 1.51 em
+16 pt = 1.34 em
+22px = 1.4em
+18px = 1.125em
+16px = 1em
+*/
+
+.pix-header {
+	font-size: 1.2em;
+	font-weight: 600;
+	color: @darkGray;
+}
+
+.pix-subheader {
+	font-size: 1.1em;	
+	font-weight: 600;
+	color: @darkBlue;
+}
+
+.pix-body {
+	font-size: 1em;
+	font-weight: 400;
+	color: @darkGray;
+}
+
+.pix-link{
+	font-size: 1em;
+	font-weight: 600;
+	color: @accentBlue;
+}
+
+.pix-graphLabel{
+	font-size: .75em;
+	font-weight: 400;
+	color: @darkGray;
+	fill: @darkGray;
+}
+
+h1{
+	.pix-header;
+}
+
+h2 {
+	.pix-subheader;
+}
+
+p {
+	.pix-body;
+}
 
 .pageWidth {
 	width:100%;
@@ -62,7 +116,7 @@ body {
 
 /***** Navigation *******/
 
-/***** Cirecle Navigation **********/
+/***** Circle Navigation **********/
 .circle-nav {
 	overflow:hidden;
 	width:54px;
@@ -148,13 +202,13 @@ body {
 	
 	 h1 {
 		float:left;
-		color:darken(@lightGray, 30%);
-		font-size:1em;
+		/*color:darken(@lightGray, 30%);*/
+		/*.pix-header;*/
 	}	
 	
 	p {
 		float:right;
-		font-size:0.75em;		
+		.pix-body;		
 	}
 }
 
@@ -168,11 +222,12 @@ body {
 	.impact-section {
 		margin-top:2%;	
 	}
-	
+	/*
 	p {
 		color:darken(@lightGray, 20%);
 		font-size:0.8em;	
 	}
+	*/
 }
 
 .impact.expanded, .week.expanded {
@@ -309,11 +364,12 @@ body {
 
 .leader .position {
 	float:left;
-	font-size:2em;
 	margin:0;
 	padding:0;
 	margin-right:5%;
-	color:lighten(@darkGray, 10%);
+	.pix-header;
+	/*font-size:2em;*/
+	/*color:lighten(@darkGray, 10%);*/
 }
 
 .leader img {
@@ -329,10 +385,11 @@ body {
 }
 
 .leader h1 {
-	font-size:1.5em;
 	text-align: left;
 	float:left;
+	/*font-size:1.5em;
 	color:lighten(@darkGray, 10%);
+	*/
 }
 
 .leader header h1 {
@@ -341,7 +398,8 @@ body {
 }
 
 .leader h2 {
-	font-size:.75em;
+	.pix-body;
+	/*font-size:.75em;*/
 	text-align: left;
 }
 
@@ -484,11 +542,14 @@ body {
 }
 
 /***** Typography *******/
+/*
+22 pt = 1.84 em
+18 pt = 1.51 em
+16 pt = 1.34 em
+*/
 h1 {
 	text-align:center;
-	font-size:2em;
 	margin-bottom:2%;
-	color:darken(@lightGray, 20%);
 }
 
 .main-header h1 {
@@ -496,13 +557,12 @@ h1 {
 	margin-bottom: 0;
 	text-align: left;
 	padding-left:5px;
-	color:darken(@lightGray, 40%);
+	color: @darkGray;
+	/*color:darken(@lightGray, 40%);*/
 }
 
 h2 {
-	font-size:1.5em;
 	margin-bottom:4%;
-	color:@darkGray;
 	text-align:center;
 }
 
@@ -523,7 +583,7 @@ h4 {
 }
 
 p {
-	 padding-bottom: 1em;
+	padding-bottom: 1em;
 }
 
 a, h1 a, h2 a {
@@ -605,13 +665,14 @@ strong {
 .linebreak {
 	overflow: hidden;
 }
+/*
 .left {
 	float:left;	
 }
 
 .right {
 	float:right;
-}
+}*/
 
 /******** Graphing Override *****/
 #canvas {
@@ -646,14 +707,12 @@ strong {
 
 /* http://tutorials.jenkov.com/svg/text-element.html*/
 .d3Chart text {
-	fill: @darkGray;
-    font-size: 9pt;
+	.pix-graphLabel;
 }
 
 .d3BarChart {
 	text {
-		fill: @darkGray;
-	    font-size: 9pt;
+		.pix-graphLabel
 	}
 	.axis path,
 	.axis line {
@@ -692,6 +751,7 @@ strong {
 
 /* phone */
 @media only screen and (max-width:370px) {
+	
 	.leader .position {
 		font-size:1.5em;
 	}
