adding images to nav

--- a/css/styles.less
+++ b/css/styles.less
@@ -166,7 +166,7 @@ body {
 
 .bottom-nav ul li {
 	float: left;
-	width:33.33%;
+	width:25%;
 	border:1px solid darken(@lightGray, 20%);
 	border-left:none;
 }
@@ -181,13 +181,21 @@ body {
 	display:block;
 	width:100%;
 	text-align:center;
-	padding:20% 10%;
+	padding:10% 10%;
 	margin:0;
+	font-size:.5em;
 }
 
 .bottom-nav a.highlight {
 	background:lighten(@darkGray, 20%);
 	color:#fff;
+}
+
+.bottom-nav img {
+	max-width:100%;
+	width:50%;	
+	margin:auto;
+	display:block;
 }
 
 /**** Home:  Commute Impact *****/
