--- a/css/styles.less
+++ b/css/styles.less
@@ -107,7 +107,7 @@ body {
 	-webkit-overflow-scrolling: touch;
 	display:none;
 	padding:5px;
-	padding-bottom:50px;
+	padding-bottom:100px;
 }
 
 .page.current {
@@ -199,7 +199,7 @@ body {
 }
 
 /**** Home:  Commute Impact *****/
-.impact header, .week header {
+.impact .home-section-title, .week header {
 	overflow:hidden;
 
 	.arrow {
@@ -213,10 +213,41 @@ body {
 		/*color:darken(@lightGray, 30%);*/
 		/*.pix-header;*/
 	}	
+}
+
+.week header {
+	h1 {
+		font-size:.8em;
+		float:none;
+		text-align:left;
+	}
 	
-	p {
-		float:right;
-		.pix-body;		
+	.header-ctype {
+		overflow:hidden;
+		width:33%;
+		float:left;
+		padding-right:3%;
+		margin-bottom:4%;
+		
+		.week-stats {
+			float:left;
+			margin-right:6%;	
+			text-align:right;
+			width:64%;
+			font-size:.8em;
+		}
+		
+		p {
+			margin:0;
+			padding:0;
+		}
+		
+		img {
+			margin-top:2%;
+			max-width:100%;
+			width:30%;
+			float:left;
+		}
 	}
 }
 
@@ -238,27 +269,94 @@ body {
 	*/
 }
 
+.impact header {
+	overflow:hidden;
+	
+	.ppsavings {
+		float:left;
+		width:50%;	
+	}
+	
+	.ysavings {
+		float:right;
+		width:50%;	
+	}
+	
+	h2 {
+		font-size:.9em;
+	}
+	
+	p {
+		text-align:center;
+	}
+}
+
 .impact.expanded, .week.expanded {
 	background:lighten(@lightGray, 10%);	
 }
 
-.week-section {
-
-	img { width:30%;}
+.day-header {
+	width:90%;
+	float:right;
+	overflow:hidden;
+	margin-bottom:2%;
+	margin-top:2%;
+	border-bottom:1px dashed @lightGray;
 	
+	h2 {
+		width:50%;
+		float:left;
+		text-align:center;	
+		margin-bottom:0px;
+		font-size:1em;
+	}
+}
+
+.week-section {
 	.day { 
 		overflow:hidden;
+		margin-bottom:3%;
+		
+		h3 {
+			float:left;
+			width:10%;
+			text-align:center;
+		}
+		
+		section {
+			float:left;
+			width:35%;
+			margin-left:7%;
+			margin-right:3%;
+			overflow:hidden;
+			
+			p {
+				float:left;
+				width:60%;
+				margin-right:3%;
+				text-align:right;
+				font-size:.8em;
+			}
+			
+			img {
+				float:left;
+				max-width:100%;
+				width:15%;
+				margin-left:3%;	
+			}
+		}
 	}
-	
-	h3 {
-		float:left;
-		margin-right:10%;
-	}
-	
-	p {
-		float:left;
-		margin-right:2%;	
-	}
+}
+
+.section-arrow {
+	display:block;
+	width:10%;
+	margin:auto;	
+}
+
+.section-arrow.arrow-up {
+	width:10%;
+	padding:10px 0;
 }
 
 .pounds {
@@ -301,7 +399,7 @@ body {
 #challenges {
 	
 	#challenge-mode {
-		width: 60%;
+		width: 30%;
 		margin: auto auto;
 		overflow: hidden;
 	}
@@ -312,27 +410,20 @@ body {
 	#challenge-mode ul li {
 		float: left;
 		width:50%;
-		border:1px solid darken(@lightGray, 20%);
 		border-left:none;
 	}
 
-	#challenge-mode ul li:first-child {
-		border-left:1px solid darken(@lightGray, 20%);
-	}
-
 	#challenge-mode ul li a {
-		text-decoration:none;
-		color:@darkGray;
 		display:block;
 		width:100%;
 		text-align:center;
 		padding:5% 5%;
 		margin:0;
 	}
-
-	#challenge-mode a.highlight {
-		background:lighten(@darkGray, 20%);
-		color:#fff;
+	
+	#challenge-mode img {
+		max-width:100%;
+		width:60%;
 	}
 }
 
@@ -682,6 +773,10 @@ strong {
 	float:right;
 }*/
 
+.clear {
+	clear:both;	
+}
+
 /******** Graphing Override *****/
 #canvas {
 	/*width: 90% !important;	*/
@@ -745,7 +840,6 @@ strong {
 	  fill: @darkBlue ;
 	}
 }
-
 
 /***** Media Queries ****/
 
