create a new way to track the days, using images

--- a/css/styles.less
+++ b/css/styles.less
@@ -675,12 +675,11 @@ body {
 		margin-left: @onecolumn *3;
 	}
 	
-	input {
-		margin-top:2px;
+	.day-toggle{
 		float:right;
-		/*margin-right: 6.25%;*/
 		margin-right: @onecolumn;
 	}
+
 }
 
 /***** Floats ***********/
