--- a/css/styles.less
+++ b/css/styles.less
@@ -324,16 +324,24 @@ body {
 		overflow:hidden;
 		margin-bottom:3%;
 		
+		.day-date {
+			/*float: left;*/
+		}
 		h3 {
 			float:left;
 			width:10%;
 			text-align:center;
 		}
+		h4 {
+			float:left;
+			width:10%;
+			margin-top: .3em;
+		}
 		
 		section {
 			float:left;
 			width:35%;
-			margin-left:7%;
+			margin-left:2%;
 			margin-right:3%;
 			overflow:hidden;
 			
