--- a/css/styles.less
+++ b/css/styles.less
@@ -80,6 +80,53 @@ p {
 	.pix-body;
 }
 
+/***** Typography *******/
+/*
+22 pt = 1.84 em
+18 pt = 1.51 em
+16 pt = 1.34 em
+*/
+h1 {
+	text-align:center;
+	margin-bottom:2%;
+}
+
+.main-header h1 {
+	padding-top:2%;
+	margin-bottom: 0;
+	text-align: left;
+	padding-left:5px;
+	color: @darkGray;
+	/*color:darken(@lightGray, 40%);*/
+}
+
+h2 {
+	margin-bottom:4%;
+	text-align:center;
+}
+
+h2.team-home-header {
+	text-align:left;	
+}
+
+h4 {
+	font-size:.75em;	
+	color:darken(@lightGray, 30%);
+}
+/*
+p {
+	padding-bottom: 1em;
+}
+*/
+
+a, h1 a, h2 a {
+	text-decoration:none;
+}
+
+strong {
+	font-weight:600;
+}
+
 .pageWidth {
 	width:100%;
 	max-width:500px;
@@ -651,7 +698,7 @@ body {
 
 	.section-arrow {
 		margin: auto;
-		margin-top: 10px;
+		/*margin-top: 10px;*/
 	}
 /*
 	p {
@@ -661,7 +708,7 @@ body {
 	*/
 }
 
-.settings-section.first, .settings-section:first-child {
+.settings-section.first {
 	border-top:1px solid @lightGray;
 }
 
@@ -682,6 +729,8 @@ body {
 		float:right;
 	}
 }
+
+
 /*
 #privacy {
 	padding-bottom:10px;
@@ -711,6 +760,15 @@ body {
 	}
 
 }
+#commute-week.disabled {
+    background-color: white;
+    filter:alpha(opacity=30); /* IE */
+    opacity: 0.3; /* Safari, Opera */
+    -moz-opacity:0.30; /* FireFox */
+    z-index: 20;
+    background-repeat:no-repeat;
+    background-position:center;
+}
 
 /***** Floats ***********/
 .left {
@@ -721,59 +779,7 @@ body {
 	float:right;
 }
 
-/***** Typography *******/
-/*
-22 pt = 1.84 em
-18 pt = 1.51 em
-16 pt = 1.34 em
-*/
-h1 {
-	text-align:center;
-	margin-bottom:2%;
-}
 
-.main-header h1 {
-	padding-top:2%;
-	margin-bottom: 0;
-	text-align: left;
-	padding-left:5px;
-	color: @darkGray;
-	/*color:darken(@lightGray, 40%);*/
-}
-
-h2 {
-	margin-bottom:4%;
-	text-align:center;
-}
-
-h2.team-home-header {
-	text-align:left;	
-}
-/*
-h3 {
-	font-size:1.25em;
-	color:@darkGray;
-	margin-bottom:1%;
-	
-}
-*/
-h4 {
-	font-size:.75em;	
-	color:darken(@lightGray, 30%);
-}
-/*
-p {
-	padding-bottom: 1em;
-}
-*/
-
-a, h1 a, h2 a {
-	text-decoration:none;
-}
-
-strong {
-	font-weight:600;
-}
 
 /***** Progress Bars ****/
 .progress .title {
