you highlight, better scrolling on team expand

--- a/css/styles.less
+++ b/css/styles.less
@@ -522,9 +522,18 @@ body {
 	overflow:hidden;
 	.borders(2px);
 }
-
+/*
 .leader a:hover {
 	background:lighten(@accentGreen, 45%);
+}*/
+
+/*the team leader for .you*/
+.leader.your-team {
+	background:lighten(@accentGreen, 45%);
+}
+
+.leader.you {
+	background:lighten(@accentBlue, 45%);
 }
 
 .leader .position {
