--- a/css/styles.less
+++ b/css/styles.less
@@ -10,7 +10,7 @@
 
 /* assuming 16 columns per page, one column is 6.25%*/
 @onecolumn: 6.25%; 
-@header-height: 30px; /* also set in the script.js*/
+@header-height: 45px; /* also set in the script.js*/
 @footer-height: 59px;
 
 /**** Resets ***********/
@@ -33,7 +33,7 @@ img {max-width:100%}
 
 .pix-header {
 	font-size: 1.2em;
-	font-weight: 600;
+	font-weight: 500;
 	color: @darkGray;
 }
 
@@ -78,7 +78,6 @@ img {max-width:100%}
 	.pix-small; 
 	fill: @darkGray;
 }
-
 
 h1{
 	.pix-header;
@@ -165,15 +164,45 @@ body {
 .page-title {
 	position: fixed;
 	top: 0px;
+	padding:5px 1px 0% 0;
 	z-index: 100;
-	height: @header-height;
 	background: @accentBlue;
-	width:100%;
+	.pageWidth;
+	margin:auto;
+	height:@header-height;
 	text-align: center;
 	border-bottom: 1px solid darken(@lightGray, 20%);
 
 	h1 {
 		color: @pix-white;
+		font-size:24px;
+	}
+}
+
+.ppbanner {
+	background:@lightGray;
+	position:relative;
+	.left-arrow {
+		position:absolute;
+		left:3%;	
+	}
+	
+	.right-arrow {
+		position:absolute;
+		top:0;
+		right:3%;
+	}
+	
+	p {
+		padding:5px 0;
+		font-size:1em;
+		font-weight:600;
+		text-align:center;	
+	}
+	
+	a {
+		text-decoration:none;
+		color:@darkGray;	
 	}
 }
 
@@ -250,16 +279,51 @@ body {
 /**** Home:  Commute Impact *****/
 .impact .home-section-title, .week header {
 	overflow:hidden;
-
-	.arrow {
-		float:left;
-		margin-right:2%;
-		color:darken(@lightGray, 30%);	
+	
+	h1, h2, p {
+		text-align:left;
 	}
 	
-	 h1 {
+	h2, p {
+		padding:0;
+		margin:0;	
+	}
+	
+	.big-num {
+		font-size:2em;
+		font-weight:400;
+	}
+	
+	.tiny-text {
+		font-size:.7em;	
+	}
+		
+	.header-impact-com {
 		float:left;
-	}	
+		width:33%;
+	
+		img {
+			max-width:100%;
+			padding-top:20%;
+			width:30%;
+			margin-right:5%;
+			float:left;
+		}
+		
+		.num-trips {
+			float:left;
+		}
+	}
+	
+	.header-impact-3of4 {
+		width:75%;
+		float:left;	
+	}
+	
+	.header-impact-1of4 {
+		width:25%;
+		float:left;	
+	}
 }
 
 .week header {
