fixed toggle in commute

--- a/css/styles.less
+++ b/css/styles.less
@@ -291,7 +291,12 @@ body {
 	
 	.big-num {
 		font-size:2em;
-		font-weight:400;
+		font-weight:300;
+		line-height:90%;
+	}
+	
+	.med-num {
+		font-size:1.5em;	
 	}
 	
 	.tiny-text {
@@ -304,7 +309,7 @@ body {
 	
 		img {
 			max-width:100%;
-			padding-top:20%;
+			padding-top:10%;
 			width:30%;
 			margin-right:5%;
 			float:left;
@@ -312,6 +317,10 @@ body {
 		
 		.num-trips {
 			float:left;
+		}
+				
+		.big-num {
+			text-align:center;	
 		}
 	}
 	
@@ -457,7 +466,7 @@ body {
 .section-arrow {
 	display:block;
 	width:10%;
-	margin:auto;	
+	margin:15px auto 0;	
 }
 
 .section-arrow.arrow-up {
